<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/text_header_star"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:scaleType="center"
            android:src="@drawable/ic_star"
            app:tint="@color/colorAccent"
            tools:ignore="ContentDescription" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox_header_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/head_discovery_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
            android:textColor="@null"
            app:buttonTint="@color/colorAccent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_header_task"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/head_discovery_task"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_discovery"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:listitem="@layout/item_discovery" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="8dp"
        android:text="@string/button_save"
        app:icon="@drawable/ic_done_all" />
</LinearLayout>